# blaxbird

./: .gitignore  .gitlint  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
blaxbird/: __init__.py  experimental.py
blaxbird/_src/: _types.py  checkpointer.py  hooks.py  test_checkpointer.py  test_hooks.py  test_trainer.py  test_types.py  trainer.py
blaxbird/_src/experimental/: consistency_distillation.py  edm.py  parameterizations.py  rectified_flow_matching.py  samplers.py
blaxbird/_src/experimental/nn/: dit.py  embedding.py  mlp.py  mmdit.py  unet.py
examples/_common/: __init__.py  edm.py  parameterizations.py  rfm.py  samplers.py  test_edm.py  test_parameterizations.py  test_rfm.py  test_samplers.py
examples/_common/nn/: dit.py  test_dit.py  test_unet.py  unet.py
examples/cifar10_flow_matching/: README.md  dataloader.py  main.py  model.py  objective.py
examples/fsdp_tp_demo/: README.md  main.py  model.py  test_model.py
examples/llm/: README.md  dataloader.py  main.py  objective.py
examples/llm/nn/: deepseek.py  gemma.py  layers.py  qwen.py
examples/llm_reference/: README.md  deepseek.py  gemma.py  generate.py  layers.py  main.py  mixtral.py  objective.py  test_deepseek.py  test_gemma.py  test_generate.py  test_layers.py  test_mixtral.py  test_objective.py
examples/mnist_classification/: README.md  dataloader.py  main.py  model.py
