[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "blaxbird"
description = "A high-level API for building and training Flax NNX models."
authors = [{name = "Simon Dirmeier", email = "simd23@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["flax", "nnx", "high-level api"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "jax-ai-stack",
]
dynamic = ["version"]

[project.optional-dependencies]
all = [
    "wandb>=0.21.1",
]

[dependency-groups]
dev = [
    "chex",
    "gitlint>=0.19.1",
    "jupyter",
    "mypy>=2.2.0",
    "pre-commit",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]
examples = [
    "chex",
    "einops>=0.8.1",
    "grain",
    "matplotlib>=3.9",
    "ml-collections>=1.1.0",
    "tensorflow-datasets==4.9.6",
    "tensorflow==2.17.1",
    "wandb>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/dirmeier/blaxbird"

[tool.setuptools]
packages = ["blaxbird"]

[tool.setuptools.dynamic]
version = {attr = "blaxbird.__init__.__version__"}

[tool.bandit]
skips = ["B101", "B310"]

[tool.mypy]
show_error_codes = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = false
ignore_missing_imports = true
disallow_untyped_calls = false
explicit_package_bases = true


[tool.pytest.ini_options]
addopts = [
    "-v",
    "--doctest-modules",
    "--cov=blaxbird",
    "--cov-report=xml",
    "--strict-markers",
    "--strict-config",
    "-ra"
]
testpaths = [
    "blaxbird"
]

[tool.ruff]
indent-width = 2
line-length = 80
extend-exclude = ["examples/**"]

[tool.ruff.lint]
extend-select = [
    "A",    # Builtins shadowing
    "ARG",  # Unused arguments (New)
    #"ANN",  # Type annotations
    "B",    # Bugbear (common bugs)
    "C4",   # List/dict/set comprehensions
    "D",    # Docstrings
    "I",    # Isort (import sorting)
    # "N",    # PEP8 Naming conventions
    "PL",   # Pylint rules
    # "PTH",  # Pathlib usage (New)
    #"RET",  # Return statements (New)
    # "RUF",  # Ruff-specific checks (New)
    "S",    # Security checks
    "SIM",  # Code simplification
    "TCH",  # Type-checking blocks
    "UP",   # Pyupgrade (modern syntax)
]
ignore=["S101", "F841", "PLR2004", "ARG001"]

[tool.ruff.lint.pydocstyle]
convention= 'google'

[tool.uv]
upgrade-package = ["jax-ai-stack"]
